Change History
==============

2.3
---


2.2 (2008-06-07)
----------------

- Updated `fake-zope-eggs` handling, to be called when updating, so changes
  to `skip-fake-eggs` and add `additional-fake-eggs` are respected.
  [hannosch]

- Added new `skip-fake-eggs` option, that allows to skip the creation of
  fake eggs for a list of packages, so you can for example require a newer
  `zope.tal` version.
  [hannosch]

- Include the Python version Zope is compiled with into the shared-zope name.
  This allows you to have the same Zope version compiled with for example
  Python 2.3 and 2.4 but still share it. The change means, you will have to
  recompile all Zope versions.
  [hannosch, fschulze]

- Added error message for 0-byte sized Zope tarball downloads.
  [hannosch, sidnei]


2.1 (2008-06-05)
----------------

- Fixed error in retracted 2.0 release.
  [hannosch]

- Explicitly set zip-safe flag.
  [hannosch]


2.0 (2008-06-05)
----------------

- Merged all the options from the affinitic.recipe.fakezope2eggs recipe into
  this recipe.
  [jfroche, hannosch]


1.2 (2008-01-05)
----------------

- Renamed download-directory to download-cache, which is the name that is used
  by zc.buildout itself.
  [hannosch]


1.1 (2007-12-21)
----------------

- Small documentation update. Added link to the bugtracker.
  [hannosch]


1.0 (2007-11-29)
----------------

- Added changes file and small doc layout fix.
  [fschulze, hannosch]


0.3 (2007-09-05)
----------------

- Fixed an error where the "shared-zope" option was accessed but not yet set.
  [fschulze]


0.2 (2007-09-05)
----------------

- Added option to share Zope installations.
  [fschulze]


0.1 (2007-02-26)
----------------

- Initial implementation.
  [hannosch]